updated the index file with headers for the charts

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                         Geo Map
                                     </div>
                                     <div class="card-body">
-                                        Chart.js is a third party plugin that is used to generate the charts in this template. The charts below have been customized - for further customization options, please visit the official
+                                        The Map provides a geographical view of the regions and districts of the water sources where the water samples were collected for analysis.
                                         <a target="_blank" href="map.html">Geo Map</a>
                                     </div>
                                 </div>
@@ -54,7 +54,7 @@
                                         Donut Chart
                                     </div>
                                     <div class="card-body">
-                                        Chart.js is a third party plugin that is used to generate the charts in this template. The charts below have been customized - for further customization options, please visit the official
+                                        The donut chart shows the percentage composition of each type of water source from which the water samples were collected.
                                         <a target="_blank" href="donut.html">Donut Chart</a>
                                     </div>
                                 </div>
@@ -66,7 +66,7 @@
                                         Radar Chart
                                     </div>
                                     <div class="card-body">
-                                        Chart.js is a third party plugin that is used to generate the charts in this template. The charts below have been customized - for further customization options, please visit the official
+                                        The radar chart was used to identify outliers in Electrical Conductivity, Total Alkalinity, Total Hardness, Sodium, and Color properties of the water samples.
                                         <a target="_blank" href="radar.html">Radar Chart</a>
                                     </div>
                                 </div>
